--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "prettier-eslint": "^11.0.0",
     "stylelint": "^13.6.1",
     "vue": "^2.6.11",
     "vue-good-table": "^2.19.5",
